--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        postgres_version: [15, 16, 17]
+        postgres_version: [15, 16, 17, 18]
 
     steps:
       - name: Checkout repository
